half footer have done

--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
         </p>
         <div class="cards flex gap-7 mt-9">
           <div
-            class="card_1 flex-1 bg-gray-100 p-4 border rounded-2xl h-40 flex flex-col justify-between"
+            class="card_1 flex-1 bg-gray-100 p-4 border rounded-2xl h-40 flex flex-col justify-between hover:bg-gray-300"
           >
             <h3 class="capitalize text-3xl font-medium">Development & it</h3>
             <div class="flex font-semibold text-lg justify-between">
@@ -267,7 +267,7 @@
             </div>
           </div>
           <div
-            class="card_1 flex-1 bg-gray-100 p-4 border rounded-2xl flex flex-col justify-between"
+            class="card_1 flex-1 bg-gray-100 p-4 border rounded-2xl flex flex-col justify-between hover:bg-gray-300"
           >
             <h3 class="capitalize text-3xl font-medium">AI Services</h3>
             <div class="flex font-semibold text-lg justify-between">
@@ -276,7 +276,7 @@
             </div>
           </div>
           <div
-            class="card_1 flex-1 bg-gray-100 p-4 border rounded-2xl flex flex-col justify-between"
+            class="card_1 flex-1 bg-gray-100 p-4 border rounded-2xl flex flex-col justify-between hover:bg-gray-300"
           >
             <h3 class="capitalize text-3xl font-medium">Design & Creative</h3>
             <div class="flex font-semibold text-lg justify-between">
@@ -285,7 +285,7 @@
             </div>
           </div>
           <div
-            class="card_1 flex-1 bg-gray-100 p-4 border rounded-2xl flex flex-col justify-between"
+            class="card_1 flex-1 bg-gray-100 p-4 border rounded-2xl flex flex-col justify-between hover:bg-gray-300"
           >
             <h3 class="capitalize text-3xl font-medium">Saler & Marketing</h3>
             <div class="flex font-semibold text-lg justify-between">
@@ -296,7 +296,7 @@
         </div>
         <div class="cards flex gap-7 mt-9">
           <div
-            class="card_1 flex-1 bg-gray-100 p-4 border rounded-2xl h-40 flex flex-col justify-between"
+            class="card_1 flex-1 bg-gray-100 p-4 border rounded-2xl h-40 flex flex-col justify-between hover:bg-gray-300"
           >
             <h3 class="capitalize text-3xl font-medium">
               Writing & Translation
@@ -307,7 +307,7 @@
             </div>
           </div>
           <div
-            class="card_1 flex-1 bg-gray-100 p-4 border rounded-2xl flex flex-col justify-between"
+            class="card_1 flex-1 bg-gray-100 p-4 border rounded-2xl flex flex-col justify-between hover:bg-gray-300"
           >
             <h3 class="capitalize text-3xl font-medium">
               Admin & Customer Support
@@ -318,7 +318,7 @@
             </div>
           </div>
           <div
-            class="card_1 flex-1 bg-gray-100 p-4 border rounded-2xl flex flex-col justify-between"
+            class="card_1 flex-1 bg-gray-100 p-4 border rounded-2xl flex flex-col justify-between hover:bg-gray-300"
           >
             <h3 class="capitalize text-3xl font-medium">
               Finance & Accounting
@@ -329,7 +329,7 @@
             </div>
           </div>
           <div
-            class="card_1 flex-1 bg-gray-100 p-4 border rounded-2xl flex flex-col justify-between"
+            class="card_1 flex-1 bg-gray-100 p-4 border rounded-2xl flex flex-col justify-between hover:bg-gray-300"
           >
             <h3 class="capitalize text-3xl font-medium">
               Engineering & Architecture
@@ -407,19 +407,19 @@
         </p>
         <div class="card_5 flex gap-7 mt-4">
           <div
-            class="card1 p-3 flex-1 flex flex-col justify-between h-40 border-none rounded-xl bg-green-700 text-white"
+            class="card1 p-3 flex-1 flex flex-col justify-between h-40 border-none rounded-xl bg-green-700 text-white hover:bg-white hover:text-green-700"
           >
             <h1 class="font-medium text-3xl">Post A job and hire a pro</h1>
             <p>Talent Marketplace<sup>Tm</sup></p>
           </div>
           <div
-            class="card1 flex-1 bg-green-700 text-white border-none rounded-xl p-3 flex justify-between flex-col"
+            class="card1 flex-1 bg-green-700 text-white border-none rounded-xl p-3 flex justify-between flex-col hover:bg-white hover:text-green-700"
           >
             <h1 class="font-medium text-3xl">Browse and buy project</h1>
             <p>Project Catalog<sup>Tm</sup></p>
           </div>
           <div
-            class="card1 flex-1 bg-green-700 text-white border-none rounded-xl p-3 flex flex-col justify-between"
+            class="card1 flex-1 bg-green-700 text-white border-none rounded-xl p-3 flex flex-col justify-between hover:bg-white hover:text-green-700"
           >
             <h1 class="font-medium text-3xl">
               Get advice for an industry expert
@@ -697,6 +697,70 @@
         </ul>
       </div>
       <!-- page_9 end -->
+    </section>
+    <section>
+      <footer>
+        <div
+          class="footer w-11/12 mx-auto rounded-lg bg-gray-950 h-screen px-20 pt-10"
+        >
+          <div class="links flex justify-between">
+            <ul class="text-white text-sm font-normal flex flex-col gap-3">
+              <li>For Clients</li>
+              <li class="hover:underline">How to hire</li>
+              <li class="hover:underline">Talent Marketplace</li>
+              <li class="hover:underline">Project Catalog</li>
+              <li class="hover:underline">Hire an agency</li>
+              <li class="hover:underline">Enterprise</li>
+              <li class="hover:underline">Any Hire</li>
+              <li class="hover:underline">Contract-to-hire</li>
+              <li class="hover:underline">Direct Contracts</li>
+              <li class="hover:underline">Hire worldwide</li>
+              <li class="hover:underline">Hire in the USA</li>
+            </ul>
+            <ul class="text-white text-sm font-normal flex flex-col gap-3">
+              <li>For Talent</li>
+              <li class="hover:underline">How to find work</li>
+              <li class="hover:underline">Direct Contracts</li>
+              <li class="hover:underline">Find freelance jobs worldwide</li>
+              <li class="hover:underline">Find freelance jobs in the USA</li>
+              <li class="hover:underline">Win work with ads</li>
+              <li class="hover:underline">
+                Exclusive resources with Freelancer Plus
+              </li>
+            </ul>
+            <ul class="text-white text-sm font-normal flex flex-col gap-3">
+              <li>Resources</li>
+              <li class="hover:underline">Help & support</li>
+              <li class="hover:underline">Success stories</li>
+              <li class="hover:underline">Upwork reviews</li>
+              <li class="hover:underline">Resources</li>
+              <li class="hover:underline">Blog</li>
+              <li class="hover:underline">Affiliate programme</li>
+              <li class="hover:underline">Free Business Tools</li>
+            </ul>
+            <ul class="text-white text-sm font-normal flex flex-col gap-3">
+              <li>Company</li>
+              <li class="hover:underline">About us</li>
+              <li class="hover:underline">Leadership</li>
+              <li class="hover:underline">Investor relations</li>
+              <li class="hover:underline">Careers</li>
+              <li class="hover:underline">Our impact</li>
+
+              <li class="hover:underline">Press</li>
+              <li class="hover:underline">Contact us</li>
+              <li class="hover:underline">Partners</li>
+              <li class="hover:underline">Trust, safety & security</li>
+              <li class="hover:underline">Modern slavery statement</li>
+            </ul>
+          </div>
+          <div class="follow_us mt-16">
+            <div class="left_follow">
+              <h5 class="text-white text-sm font-semibold">Follow Us</h5>
+            </div>
+            <div class="right_follow"></div>
+          </div>
+        </div>
+      </footer>
     </section>
   </body>
 </html>
