--- a/index.html
+++ b/index.html
@@ -753,11 +753,78 @@
               <li class="hover:underline">Modern slavery statement</li>
             </ul>
           </div>
-          <div class="follow_us mt-16">
-            <div class="left_follow">
-              <h5 class="text-white text-sm font-semibold">Follow Us</h5>
+          <div
+            class="follow_us mt-16 flex justify-between items-center border-b border-gray-800 pb-3"
+          >
+            <div class="left_follow flex items-center gap-2">
+              <h5 class="text-white text-lg font-semibold">Follow Us</h5>
+              <ul class="flex items-center gap-2">
+                <li>
+                  <img
+                    src="./images/icons8-facebook-circled-94.png"
+                    height="30"
+                    width="40"
+                  />
+                </li>
+                <li>
+                  <img
+                    src="./images/icons8-linkedin-94.png"
+                    height="30"
+                    width="40"
+                  />
+                </li>
+                <li>
+                  <img
+                    src="./images/icons8-x-logo-50.png"
+                    height="30"
+                    width="40"
+                  />
+                </li>
+                <li>
+                  <img
+                    src="./images/icons8-youtube-logo-94.png"
+                    height="30"
+                    width="40"
+                  />
+                </li>
+                <li>
+                  <img
+                    src="./images/icons8-instagram-logo-94.png"
+                    height="30"
+                    width="40"
+                  />
+                </li>
+              </ul>
             </div>
-            <div class="right_follow"></div>
+            <div class="right_follow flex items-center gap-2">
+              <h5 class="text-white text-lg font-semibold">Mobile app</h5>
+              <ul class="flex items-center">
+                <li>
+                  <img
+                    src="./images/icons8-apple-logo-94.png"
+                    height="30"
+                    width="40"
+                  />
+                </li>
+                <li>
+                  <img
+                    src="./images/icons8-android-os-94.png"
+                    height="30"
+                    width="40"
+                  />
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="last_line">
+            <ul class="text-white text-sm font-normal flex gap-4 pt-3">
+              <li>© 2015 - 2024 Upwork® Global Inc.</li>
+              <li>Terms of Service</li>
+              <li>Privacy Policy</li>
+              <li>CA Notice at Collection</li>
+              <li>Cookie Settings</li>
+              <li>Accessibility</li>
+            </ul>
           </div>
         </div>
       </footer>
